# aether-pub

./: README.md  README_CN.md
examples/download_package_example/: README.md  pubspec.yaml
examples/download_package_example/linux/: CMakeLists.txt  my_application.cc
examples/download_package_example/test/: widget_test.dart
examples/download_package_example/web/: index.html  manifest.json
examples/download_package_example/windows/: CMakeLists.txt
examples/upload_package_example/: pubspec.yaml
examples/upload_package_example/lib/: upload_package_example.dart
server/: .env  .gitignore  Cargo.toml  README.md  Rocket.toml  aether-pub-server.service  build.sh  install-service.sh
server/docker/: Dockerfile  build.sh  docker-compose.yml
server/migrations/2025-02-19-060850_package/: down.sql  up.sql
server/src/: config.rs  lib.rs  main.rs  schema.rs
server/src/core/: headers.rs  mod.rs
server/src/core/model/: error.rs
server/src/database/: any_connection.rs  mod.rs  package_dao.rs  package_entity.rs  package_version_dao.rs  package_version_entity.rs  server_database.rs  sqlite_database.rs
server/src/fairing/: cache_fairing.rs  mod.rs  request_logger_fairing.rs
server/src/models/: http.rs  mod.rs  package.rs  package_version.rs  package_versions.rs  pubspec.rs
server/src/routes/: http.rs  mod.rs  package_response_data.rs  package_version_response_data.rs  packages.rs
server/src/service/: mod.rs  package_service.rs
server/tests/service/: mod.rs  package_service_test.rs
web/: README.md  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
web/app/: root.tsx
(+22 files in other folders)
