[package]
name = "aether-pub-server"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.1", default-features = false, features = ["json"] }
rocket_cors = { version = "0.6.0-alpha1", default-features = false }
serde = { version = "1.0.133", features = ["derive"] }
serde_json = "1.0.75"
scrypt = { version = "0.8.1", default-features = true }
chrono = { version = "0.4.19", features = ["serde"] }
diesel = { version = "1.4.8", features = ["postgres", "chrono"] }
validator = "0.14.0"
validator_derive = "0.14.0"
slug = "0.1.4"
rand = "0.8.4"
dotenv = "0.15.0"
jsonwebtoken = "7.2.0"